<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLbl_inputText"/>

        <EditText
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Введите текст!"
            android:ems="10"
            android:inputType="text"
            android:text="@string/txtLbl_inputText_default_text"
            android:textSize="26sp"/>

        <RadioGroup
            android:id="@+id/rbGroupe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPrintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_0_text"
                android:checked="true"
                android:textSize="26sp"/>

            <RadioButton
                android:id="@+id/rbShowDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_1_text"
                android:textSize="26sp"/>

            <RadioButton
                android:id="@+id/rbPrintQrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_2_text"
                android:textSize="26sp"/>

            <RadioButton
                android:id="@+id/rbCutPaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_3_text"
                android:textSize="26sp"/>

            <RadioButton
                android:id="@+id/rbOpenCashDraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_4_text"
                android:textSize="26sp"/>

            <RadioButton
                android:id="@+id/rbPrintSystemInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_5_text"
                android:textSize="26sp"/>

            <RadioButton
                android:id="@+id/rbPrintTestReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_6_text"
                android:textSize="26sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Ok"
            android:textSize="26sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLogBackGround"
            android:scrollIndicators="right"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>